@@ -6,7 +6,6 @@ import es.uji.al426239.FX.vista.Vista;
 import es.uji.al426239.algoritmos.Comparator;
 import es.uji.al426239.algoritmos.FilaVacia;
 import es.uji.al426239.algoritmos.TablaVacia;
-import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.scene.control.ListView;
 import javafx.scene.control.RadioButton;
@@ -24,22 +23,25 @@ import java.util.List;
 import java.util.Scanner;
 
 public class Controlador {
-String Distancia ;
-String Algoritm ;
+    String Distancia ;
+    String Algoritm ;
     private Modelo modelo;
     private Vista vista;
     private AskModelo askModelo;
     private List<String> Algoritmo;
     private List<String> Distancias;
-    public Controlador(AskModelo askModelo){
+
+    public Controlador(AskModelo askModelo) {
         this.askModelo = askModelo;
         Algoritmo = askModelo.GetAlgoritmos();
         Distancias = askModelo.GetDistancias();
     }
+
     public  void reset(){
         Distancia = null;
         Algoritm = null;
     }
+
     public ListView<String> anyadircanciones() throws FileNotFoundException {
         ListView<String> listacanciones = new ListView<>();
         String sep = FileSystems.getDefault().getSeparator();
@@ -50,6 +52,7 @@ String Algoritm ;
         }
         return listacanciones;
     }
+
     public void crearlistacanciones(VBox vBox) throws FileNotFoundException {
         Text titulolistacanciones = new Text("Song Titles");
         titulolistacanciones.setFont(Font.font("Bree Serif", FontWeight.SEMI_BOLD,20));
@@ -57,6 +60,7 @@ String Algoritm ;
         vBox.getChildren().addAll(titulolistacanciones,listacanciones);
         vista.botonRecomendar(vBox,listacanciones);
     }
+
     public void actualizarListaRecomendaciones(Spinner<Integer> spinner, HBox hBox) {
         spinner.valueProperty().addListener((obs, oldValue, newValue) -> {
             VBox vBox = (VBox) hBox.getParent();
@@ -72,15 +76,17 @@ String Algoritm ;
         });
         hBox.getChildren().clear();
     }
+
     private void agregarBotones(VBox vBox) {
         vista.botonVolver(vBox);
         vista.botonClose(vBox);
     }
+
     public VBox ensenyaRecomendaciones(HBox hBox, VBox vBox) throws FilaVacia, IOException, TablaVacia, Comparator {
         Text text = new Text("If you liked "+modelo.getCancionRecomendada()+" you might like");
         ListView<String> listarecomendaciones = new ListView<>();
         modelo.setRecomendaciones(Algoritm,Distancia);
-        ObservableList<String> items = modelo.getRecomendaciones() ;
+        ObservableList<String> items = modelo.getRecomendaciones();
         listarecomendaciones.setItems(items);
         vBox.getChildren().addAll(hBox,text,listarecomendaciones);
         return vBox;
@@ -89,19 +95,15 @@ String Algoritm ;
     public void Evento(RadioButton radioButton) {
         switch (radioButton.getText()){
                 case "Manhattan":
-                    System.out.println("das");
                     Distancia = Distancias.get(1) ;
                     break;
                 case "Euclidean":
-                    System.out.println("asd");
-                    Distancia =  Distancias.get(0);
+                    Distancia =  Distancias.getFirst();
                     break;
                 case "Recommend based on songs features":
-                    System.out.println("alfa");
-                    Algoritm = Algoritmo.get(0);
+                    Algoritm = Algoritmo.getFirst();
                     break;
                 case "Recommend based on guessed genre":
-                    System.out.println("Joel");
                     Algoritm = Algoritmo.get(1);
                     break;
                     default:
@@ -109,15 +111,19 @@ String Algoritm ;
 
         }
     }
+
     public boolean isReadyToRecommend() {
         return Algoritm != null && Distancia != null;
     }
+
     public void setModelo(Modelo modelo){
         this.modelo = modelo;
     }
+
     public void setVista(Vista vista){
         this.vista = vista;
     }
+
     public List<String> GetAlgoritmos(){
         return Algoritmo;
     }
